# vehicle_insurance_mlops

./: LICENSE  README.md  pyproject.toml  setup.py
notebook/: my-eda.ipynb
